--- a/Front-end/pages/admin/dashboard.html
+++ b/Front-end/pages/admin/dashboard.html
@@ -51,6 +51,10 @@
                 <i class="bi bi-flag-fill"></i>
                 <span>Reports</span>
             </a>
+            <a href="admin-action.html" class="menu-item">
+                <i class="bi bi-clock-history"></i>
+                <span>Admin History</span>
+            </a>
         </div>
     </nav>
 
