--- a/Front-end/pages/friends.html
+++ b/Front-end/pages/friends.html
@@ -37,19 +37,19 @@
             </a>
             <a class="nav-link active" id="friendsPage" href="#" data-bs-toggle="tooltip" title="Friends">
               <i class="fa-solid fa-user-group"></i>
-              <span class="badge rounded-pill bg-danger">0</span>
+              <span class="badge rounded-pill bg-danger" id="friendsBadge">0</span>
             </a>
-            <a class="nav-link" href="market.html" data-bs-toggle="tooltip" title="Market">
-              <i class="fa-solid fa-shop"></i>
-              <span class="badge rounded-pill bg-danger">0</span>
-            </a>
+<!--            <a class="nav-link" href="market.html" data-bs-toggle="tooltip" title="Market">-->
+<!--              <i class="fa-solid fa-shop"></i>-->
+<!--              <span class="badge rounded-pill bg-danger">0</span>-->
+<!--            </a>-->
             <a class="nav-link" href="messages.html" data-bs-toggle="tooltip" title="Messages">
               <i class="fa-solid fa-message"></i>
-              <span class="badge rounded-pill bg-danger">0</span>
+              <span class="badge rounded-pill bg-danger" id="messageBadge">0</span>
             </a>
             <a class="nav-link" href="notifications.html" data-bs-toggle="tooltip" title="Notifications">
               <i class="fa-solid fa-bell"></i>
-              <span class="badge rounded-pill bg-danger">0</span>
+              <span class="badge rounded-pill bg-danger" id="notificationBadge">0</span>
             </a>
           </div>
           <div class="navbar-nav nav-icons work-menu">
