--- a/Front-end/pages/notifications.html
+++ b/Front-end/pages/notifications.html
@@ -35,12 +35,14 @@
           </a>
           <a class="nav-link" href="friends.html" data-bs-toggle="tooltip" title="Friends">
             <i class="fa-solid fa-user-group"></i>
+            <span class="badge rounded-pill bg-danger" id="friendsBadge">0</span>
           </a>
-          <a class="nav-link" href="market.html" data-bs-toggle="tooltip" title="Market">
-            <i class="fa-solid fa-shop"></i>
+<!--          <a class="nav-link" href="market.html" data-bs-toggle="tooltip" title="Market">-->
+<!--            <i class="fa-solid fa-shop"></i>-->
           </a>
           <a class="nav-link" href="messages.html" data-bs-toggle="tooltip" title="Messages">
             <i class="fa-solid fa-message"></i>
+            <span class="badge rounded-pill bg-danger" id="messageBadge">0</span>
           </a>
           <a class="nav-link active" href="#" data-bs-toggle="tooltip" title="Notifications">
             <i class="fa-solid fa-bell"></i>
