--- a/Front-end/pages/profile-view.html
+++ b/Front-end/pages/profile-view.html
@@ -55,16 +55,16 @@
                 title="Friends"
               >
                 <i class="fa-solid fa-user-group"></i>
-                <span class="badge rounded-pill bg-danger">7</span>
+                <span class="badge rounded-pill bg-danger" id="friendsBadge">0</span>
               </a>
-              <a
-                class="nav-link"
-                href="market.html"
-                data-bs-toggle="tooltip"
-                title="Market"
-              >
-                <i class="fa-solid fa-shop"></i>
-              </a>
+<!--              <a-->
+<!--                class="nav-link"-->
+<!--                href="market.html"-->
+<!--                data-bs-toggle="tooltip"-->
+<!--                title="Market"-->
+<!--              >-->
+<!--                <i class="fa-solid fa-shop"></i>-->
+<!--              </a>-->
               <a
                 class="nav-link"
                 href="messages.html"
@@ -72,7 +72,7 @@
                 title="Messages"
               >
                 <i class="fa-solid fa-message"></i>
-                <span class="badge rounded-pill bg-danger">3</span>
+                <span class="badge rounded-pill bg-danger" id="messageBadge">0</span>
               </a>
               <a
                 class="nav-link"
@@ -81,7 +81,7 @@
                 title="Notifications"
               >
                 <i class="fa-solid fa-bell"></i>
-                <span class="badge rounded-pill bg-danger">5</span>
+                <span class="badge rounded-pill bg-danger" id="notificationBadge">0</span>
               </a>
             </div>
             <div class="navbar-nav nav-icons work-menu">
