--- a/Front-end/pages/settings.html
+++ b/Front-end/pages/settings.html
@@ -37,37 +37,22 @@
                 </a>
                 <a class="nav-link" href="friends.html" data-bs-toggle="tooltip" title="Friends">
                   <i class="fa-solid fa-user-group"></i>
-                  <span class="badge rounded-pill bg-danger">7</span>
+                  <span class="badge rounded-pill bg-danger" id="friendsBadge">0</span>
                 </a>
-                <a class="nav-link" href="market.html" data-bs-toggle="tooltip" title="Market">
-                  <i class="fa-solid fa-shop"></i>
-                  <span class="badge rounded-pill bg-danger">2</span>
-                </a>
+<!--                <a class="nav-link" href="market.html" data-bs-toggle="tooltip" title="Market">-->
+<!--                  <i class="fa-solid fa-shop"></i>-->
+<!--                  <span class="badge rounded-pill bg-danger">2</span>-->
+<!--                </a>-->
                 <a class="nav-link" href="messages.html" data-bs-toggle="tooltip" title="Messages">
                   <i class="fa-solid fa-message"></i>
-                  <span class="badge rounded-pill bg-danger">3</span>
+                  <span class="badge rounded-pill bg-danger" id="messageBadge">0</span>
                 </a>
                 <a class="nav-link" href="notifications.html" data-bs-toggle="tooltip" title="Notifications">
                   <i class="fa-solid fa-bell"></i>
-                  <span class="badge rounded-pill bg-danger">5</span>
+                  <span class="badge rounded-pill bg-danger" id="notificationBadge">0</span>
                 </a>
               </div>
               <div class="navbar-nav nav-icons work-menu">
-                <!-- <a class="nav-link" href="#" id="menuDropdown" data-bs-toggle="dropdown" title="Menu">
-                  <i class="bi bi-grid-3x3-gap-fill"></i>
-                </a>
-                <div class="dropdown-menu dropdown-menu-end" aria-labelledby="menuDropdown">
-                  <h6 class="dropdown-header">Menu</h6>
-                  <a class="dropdown-item" href="groups.html">
-                    <i class="bi bi-people-fill me-2 text-primary"></i> Groups
-                  </a>
-                  <a class="dropdown-item" href="pages.html">
-                    <i class="bi bi-file-earmark-text me-2 text-success"></i> Pages
-                  </a>
-                  <a class="dropdown-item" href="birthdays.html">
-                    <i class="bi bi-gift-fill me-2 text-danger"></i> Birthdays
-                  </a>
-                </div> -->
                 <a class="nav-link profile-link active" href="#" id="profileDropdown" data-bs-toggle="dropdown" title="Profile">
                   <img id="navBarProfileImg" src="../assets/image/Profile-picture.png" alt="Profile" class="profile-img">
                   <span id="profile-down-arrow"><i class="fa-solid fa-circle-chevron-down"></i></span>
