--- a/Front-end/pages/timeline.html
+++ b/Front-end/pages/timeline.html
@@ -55,17 +55,17 @@
                             title="Friends"
                     >
                         <i class="fa-solid fa-user-group"></i>
-                        <span class="badge rounded-pill bg-danger">7</span>
+                        <span class="badge rounded-pill bg-danger" id="friendsBadge">0</span>
                     </a>
-                    <a
-                            class="nav-link"
-                            href="market.html"
-                            data-bs-toggle="tooltip"
-                            title="Market"
-                    >
-                        <i class="fa-solid fa-shop"></i>
-                        <span class="badge rounded-pill bg-danger">2</span>
-                    </a>
+<!--                    <a-->
+<!--                            class="nav-link"-->
+<!--                            href="market.html"-->
+<!--                            data-bs-toggle="tooltip"-->
+<!--                            title="Market"-->
+<!--                    >-->
+<!--                        <i class="fa-solid fa-shop"></i>-->
+<!--                        <span class="badge rounded-pill bg-danger">2</span>-->
+<!--                    </a>-->
                     <a
                             class="nav-link"
                             href="messages.html"
@@ -73,7 +73,7 @@
                             title="Messages"
                     >
                         <i class="fa-solid fa-message"></i>
-                        <span class="badge rounded-pill bg-danger">3</span>
+                        <span class="badge rounded-pill bg-danger" id="messageBadge">0</span>
                     </a>
                     <a
                             class="nav-link"
@@ -82,7 +82,7 @@
                             title="Notifications"
                     >
                         <i class="fa-solid fa-bell"></i>
-                        <span class="badge rounded-pill bg-danger">5</span>
+                        <span class="badge rounded-pill bg-danger" id="notificationBadge">0</span>
                     </a>
                 </div>
                 <div class="navbar-nav nav-icons work-menu">
