--- a/Front-end/pages/timeline.html
+++ b/Front-end/pages/timeline.html
@@ -206,7 +206,7 @@
                 </div>
 
                 <!-- Main Content -->
-                <div class="col-md-6">
+                <div class="col-md-9">
                     <!-- Create Post -->
                     <div class="card mb-3 create-post">
                         <div class="card-body">
@@ -244,136 +244,136 @@
                 </div>
 
                 <!-- Right Sidebar -->
-                <div class="col-md-3">
-                    <div class="chat-quick-view mb-3">
-                        <div class="card mb-3">
-                            <div class="card-header bg-transparent">
-                                <h6 class="mb-0">Private Chat</h6>
-                            </div>
-                            <div class="card-body p-0">
-                                <div class="list-group list-group-flush">
-                                    <a
-                                            href="#"
-                                            class="list-group-item list-group-item-action"
-                                    >
-                                        <div class="d-flex align-items-center shortcut-item">
-                                            <img
-                                                    src="../assets/image/Test-profile-img.jpg"
-                                                    alt="Profile"
-                                                    class="rounded-circle me-2"
-                                            />
-                                            <div>
-                                                <h6 class="mb-0">Supun Maduranga</h6>
-                                                <small class="text-muted"
-                                                >You: Great idea! 👍</small
-                                                >
-                                            </div>
-                                        </div>
-                                    </a>
-                                    <a
-                                            href="#"
-                                            class="list-group-item list-group-item-action"
-                                    >
-                                        <div class="d-flex align-items-center shortcut-item">
-                                            <img
-                                                    src="../assets/image/Test-profile-img.jpg"
-                                                    alt="Profile"
-                                                    class="rounded-circle me-2"
-                                            />
-                                            <div>
-                                                <h6 class="mb-0">Lahiru Kodikara</h6>
-                                                <small class="text-muted"
-                                                >lahiru: Check this out!</small
-                                                >
-                                            </div>
-                                        </div>
-                                    </a>
-                                    <a
-                                            href="#"
-                                            class="list-group-item list-group-item-action"
-                                    >
-                                        <div class="d-flex align-items-center shortcut-item">
-                                            <img
-                                                    src="../assets/image/Test-profile-img.jpg"
-                                                    alt="Profile"
-                                                    class="rounded-circle me-2"
-                                            />
-                                            <div>
-                                                <h6 class="mb-0">Vihanga Heshan</h6>
-                                                <small class="text-muted"
-                                                >You: Meeting at 3 PM</small
-                                                >
-                                            </div>
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="card mb-3">
-                            <div class="card-header bg-transparent">
-                                <h6 class="mb-0">Group Chat</h6>
-                            </div>
-                            <div class="card-body p-0">
-                                <div class="list-group list-group-flush">
-                                    <a
-                                            href="#"
-                                            class="list-group-item list-group-item-action"
-                                    >
-                                        <div class="d-flex align-items-center shortcut-item">
-                                            <img
-                                                    src="../assets/image/Test-profile-img.jpg"
-                                                    alt="Group"
-                                                    class="rounded-circle me-2"
-                                            />
-                                            <div>
-                                                <h6 class="mb-0">Tech Team</h6>
-                                                <small class="text-muted"
-                                                >You: Great idea! 👍</small
-                                                >
-                                            </div>
-                                        </div>
-                                    </a>
-                                    <a
-                                            href="#"
-                                            class="list-group-item list-group-item-action"
-                                    >
-                                        <div class="d-flex align-items-center shortcut-item">
-                                            <img
-                                                    src="../assets/image/Test-profile-img.jpg"
-                                                    alt="Group"
-                                                    class="rounded-circle me-2"
-                                            />
-                                            <div>
-                                                <h6 class="mb-0">Design Squad</h6>
-                                                <small class="text-muted"
-                                                >Sarah: Check this out!</small
-                                                >
-                                            </div>
-                                        </div>
-                                    </a>
-                                    <a
-                                            href="#"
-                                            class="list-group-item list-group-item-action"
-                                    >
-                                        <div class="d-flex align-items-center shortcut-item">
-                                            <img
-                                                    src="../assets/image/Test-profile-img.jpg"
-                                                    alt="Group"
-                                                    class="rounded-circle me-2"
-                                            />
-                                            <div>
-                                                <h6 class="mb-0">Project X</h6>
-                                                <small class="text-muted"
-                                                >Mike: Meeting at 3 PM</small
-                                                >
-                                            </div>
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+<!--                <div class="col-md-3">-->
+<!--                    <div class="chat-quick-view mb-3">-->
+<!--                        <div class="card mb-3">-->
+<!--                            <div class="card-header bg-transparent">-->
+<!--                                <h6 class="mb-0">Private Chat</h6>-->
+<!--                            </div>-->
+<!--                            <div class="card-body p-0">-->
+<!--                                <div class="list-group list-group-flush">-->
+<!--                                    <a-->
+<!--                                            href="#"-->
+<!--                                            class="list-group-item list-group-item-action"-->
+<!--                                    >-->
+<!--                                        <div class="d-flex align-items-center shortcut-item">-->
+<!--                                            <img-->
+<!--                                                    src="../assets/image/Test-profile-img.jpg"-->
+<!--                                                    alt="Profile"-->
+<!--                                                    class="rounded-circle me-2"-->
+<!--                                            />-->
+<!--                                            <div>-->
+<!--                                                <h6 class="mb-0">Supun Maduranga</h6>-->
+<!--                                                <small class="text-muted"-->
+<!--                                                >You: Great idea! 👍</small-->
+<!--                                                >-->
+<!--                                            </div>-->
+<!--                                        </div>-->
+<!--                                    </a>-->
+<!--                                    <a-->
+<!--                                            href="#"-->
+<!--                                            class="list-group-item list-group-item-action"-->
+<!--                                    >-->
+<!--                                        <div class="d-flex align-items-center shortcut-item">-->
+<!--                                            <img-->
+<!--                                                    src="../assets/image/Test-profile-img.jpg"-->
+<!--                                                    alt="Profile"-->
+<!--                                                    class="rounded-circle me-2"-->
+<!--                                            />-->
+<!--                                            <div>-->
+<!--                                                <h6 class="mb-0">Lahiru Kodikara</h6>-->
+<!--                                                <small class="text-muted"-->
+<!--                                                >lahiru: Check this out!</small-->
+<!--                                                >-->
+<!--                                            </div>-->
+<!--                                        </div>-->
+<!--                                    </a>-->
+<!--                                    <a-->
+<!--                                            href="#"-->
+<!--                                            class="list-group-item list-group-item-action"-->
+<!--                                    >-->
+<!--                                        <div class="d-flex align-items-center shortcut-item">-->
+<!--                                            <img-->
+<!--                                                    src="../assets/image/Test-profile-img.jpg"-->
+<!--                                                    alt="Profile"-->
+<!--                                                    class="rounded-circle me-2"-->
+<!--                                            />-->
+<!--                                            <div>-->
+<!--                                                <h6 class="mb-0">Vihanga Heshan</h6>-->
+<!--                                                <small class="text-muted"-->
+<!--                                                >You: Meeting at 3 PM</small-->
+<!--                                                >-->
+<!--                                            </div>-->
+<!--                                        </div>-->
+<!--                                    </a>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <div class="card mb-3">-->
+<!--                            <div class="card-header bg-transparent">-->
+<!--                                <h6 class="mb-0">Group Chat</h6>-->
+<!--                            </div>-->
+<!--                            <div class="card-body p-0">-->
+<!--                                <div class="list-group list-group-flush">-->
+<!--                                    <a-->
+<!--                                            href="#"-->
+<!--                                            class="list-group-item list-group-item-action"-->
+<!--                                    >-->
+<!--                                        <div class="d-flex align-items-center shortcut-item">-->
+<!--                                            <img-->
+<!--                                                    src="../assets/image/Test-profile-img.jpg"-->
+<!--                                                    alt="Group"-->
+<!--                                                    class="rounded-circle me-2"-->
+<!--                                            />-->
+<!--                                            <div>-->
+<!--                                                <h6 class="mb-0">Tech Team</h6>-->
+<!--                                                <small class="text-muted"-->
+<!--                                                >You: Great idea! 👍</small-->
+<!--                                                >-->
+<!--                                            </div>-->
+<!--                                        </div>-->
+<!--                                    </a>-->
+<!--                                    <a-->
+<!--                                            href="#"-->
+<!--                                            class="list-group-item list-group-item-action"-->
+<!--                                    >-->
+<!--                                        <div class="d-flex align-items-center shortcut-item">-->
+<!--                                            <img-->
+<!--                                                    src="../assets/image/Test-profile-img.jpg"-->
+<!--                                                    alt="Group"-->
+<!--                                                    class="rounded-circle me-2"-->
+<!--                                            />-->
+<!--                                            <div>-->
+<!--                                                <h6 class="mb-0">Design Squad</h6>-->
+<!--                                                <small class="text-muted"-->
+<!--                                                >Sarah: Check this out!</small-->
+<!--                                                >-->
+<!--                                            </div>-->
+<!--                                        </div>-->
+<!--                                    </a>-->
+<!--                                    <a-->
+<!--                                            href="#"-->
+<!--                                            class="list-group-item list-group-item-action"-->
+<!--                                    >-->
+<!--                                        <div class="d-flex align-items-center shortcut-item">-->
+<!--                                            <img-->
+<!--                                                    src="../assets/image/Test-profile-img.jpg"-->
+<!--                                                    alt="Group"-->
+<!--                                                    class="rounded-circle me-2"-->
+<!--                                            />-->
+<!--                                            <div>-->
+<!--                                                <h6 class="mb-0">Project X</h6>-->
+<!--                                                <small class="text-muted"-->
+<!--                                                >Mike: Meeting at 3 PM</small-->
+<!--                                                >-->
+<!--                                            </div>-->
+<!--                                        </div>-->
+<!--                                    </a>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
             </div>
         </div>
     </div>
