--- a/Front-end/pages/messages.html
+++ b/Front-end/pages/messages.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Luma | Messages</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
@@ -11,6 +10,7 @@
     <link rel="icon" href="../assets/image/Luma-logo.jpeg">
     <link rel="stylesheet" href="../assets/css/messages.css">
     <link rel="stylesheet" href="../assets/css/common.css">
+    <script src="https://download.agora.io/sdk/release/AgoraRTC_N-4.19.3.js"></script>
   </head>
   <body>
     <div id="app">
@@ -125,51 +125,11 @@
                 <div class="tab-content">
                   <!-- Private Chats -->
                   <div class="tab-pane fade show active" id="private-chats">
-                    <div class="chat-list">
-                      <div class="chat-item active">
-                        <div class="d-flex align-items-center">
-                          <div class="position-relative">
-                            <img src="../assets/image/Test-profile-img.jpg" alt="Profile" class="rounded-circle">
-                            <span class="online-indicator"></span>
-                          </div>
-                          <div class="chat-info">
-                            <h6 class="mb-0">Supun Maduranga</h6>
-                            <p class="mb-0">You: Great idea! 👍</p>
-                          </div>
-                          <div class="chat-meta">
-                            <span class="time">2m</span>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="chat-item">
-                        <div class="d-flex align-items-center">
-                          <div class="position-relative">
-                            <img src="../assets/image/Test-profile-img.jpg" alt="Profile" class="rounded-circle">
-                            <span class="online-indicator"></span>
-                          </div>
-                          <div class="chat-info">
-                            <h6 class="mb-0">Lahiru Kodikara</h6>
-                            <p class="mb-0">Check this out!</p>
-                          </div>
-                          <div class="chat-meta">
-                            <span class="time">5m</span>
-                            <span class="unread-count">2</span>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="chat-item">
-                        <div class="d-flex align-items-center">
-                          <div class="position-relative">
-                            <img src="../assets/image/Test-profile-img.jpg" alt="Profile" class="rounded-circle">
-                          </div>
-                          <div class="chat-info">
-                            <h6 class="mb-0">Vihanga Heshan</h6>
-                            <p class="mb-0">Meeting at 3 PM</p>
-                          </div>
-                          <div class="chat-meta">
-                            <span class="time">1h</span>
-                          </div>
-                        </div>
+                    <div class="chat-list" id="private-chats-list">
+                      <!-- Private chats will be loaded here -->
+                      <div class="text-center p-4 text-muted" id="no-private-chats">
+                        <i class="bi bi-chat-dots fs-1"></i>
+                        <p class="mt-2">No private chats yet</p>
                       </div>
                     </div>
                   </div>
@@ -181,50 +141,11 @@
                         <i class="bi bi-plus-circle me-2"></i>Create New Group
                       </button>
                     </div>
-                    <div class="chat-list">
-                      <div class="chat-item">
-                        <div class="d-flex align-items-center">
-                          <div class="position-relative">
-                            <img src="../assets/image/Test-profile-img.jpg" alt="Group" class="rounded-circle">
-                            <span class="online-indicator"></span>
-                          </div>
-                          <div class="chat-info">
-                            <h6 class="mb-0">Tech Team</h6>
-                            <p class="mb-0">Sarah: New project update</p>
-                          </div>
-                          <div class="chat-meta">
-                            <span class="time">1m</span>
-                            <span class="unread-count">5</span>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="chat-item">
-                        <div class="d-flex align-items-center">
-                          <div class="position-relative">
-                            <img src="../assets/image/Test-profile-img.jpg" alt="Group" class="rounded-circle">
-                          </div>
-                          <div class="chat-info">
-                            <h6 class="mb-0">Design Squad</h6>
-                            <p class="mb-0">Mike: Latest mockups</p>
-                          </div>
-                          <div class="chat-meta">
-                            <span class="time">30m</span>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="chat-item">
-                        <div class="d-flex align-items-center">
-                          <div class="position-relative">
-                            <img src="../assets/image/Test-profile-img.jpg" alt="Group" class="rounded-circle">
-                          </div>
-                          <div class="chat-info">
-                            <h6 class="mb-0">Project X</h6>
-                            <p class="mb-0">John: Meeting notes</p>
-                          </div>
-                          <div class="chat-meta">
-                            <span class="time">2h</span>
-                          </div>
-                        </div>
+                    <div class="chat-list" id="group-chats-list">
+                      <!-- Group chats will be loaded here -->
+                      <div class="text-center p-4 text-muted" id="no-group-chats">
+                        <i class="bi bi-people fs-1"></i>
+                        <p class="mt-2">No group chats yet</p>
                       </div>
                     </div>
                   </div>
@@ -235,99 +156,59 @@
             <!-- Chat Window -->
             <div class="col-md-8">
               <div class="chat-window">
-                <!-- Chat Header -->
-                <div class="chat-header">
-                  <div class="d-flex align-items-center">
-                    <div class="position-relative">
-                      <img src="../assets/image/Test-profile-img.jpg" alt="Profile" class="rounded-circle">
-                      <span class="online-indicator"></span>
-                    </div>
-                    <div class="chat-user-info">
-                      <h6 class="mb-0">Supun Maduranga</h6>
-                      <small class="text-muted">Online</small>
-                    </div>
-                  </div>
-                  <div class="chat-actions">
-                    <button class="btn btn-light" data-bs-toggle="tooltip" title="Voice Call">
-                      <i class="bi bi-telephone"></i>
-                    </button>
-                    <button class="btn btn-light" data-bs-toggle="tooltip" title="Video Call">
-                      <i class="bi bi-camera-video"></i>
-                    </button>
-                    <button class="btn btn-light" data-bs-toggle="tooltip" title="More Options">
-                      <i class="bi bi-three-dots-vertical"></i>
-                    </button>
-                  </div>
+                <!-- Initial State -->
+                <div id="initial-state" class="d-flex flex-column align-items-center justify-content-center h-100 text-center text-muted">
+                  <i class="bi bi-chat-text fs-1 mb-3"></i>
+                  <h5>Select a chat to start messaging</h5>
+                  <p class="small">Choose from your private or group conversations</p>
                 </div>
 
-                <!-- Chat Messages -->
-                <div class="chat-messages">
-                  <div class="message-date-divider">
-                    <span>Today</span>
-                  </div>
-                  
-                  <!-- Received Message -->
-                  <div class="message received">
-                    <div class="message-content">
-                      <p>Hey there! How are you doing today?</p>
-                      <span class="message-time">10:30 AM</span>
+                <!-- Active Chat State -->
+                <div id="active-chat" style="display: none;">
+                  <!-- Chat Header -->
+                  <div class="chat-header">
+                    <div class="d-flex align-items-center">
+                      <div class="position-relative">
+                        <img src="../assets/image/Profile-picture.png" alt="Profile" class="rounded-circle">
+                        <span class="online-indicator"></span>
+                      </div>
+                      <div class="chat-user-info">
+                        <h6 class="mb-0"></h6>
+                        <small class="text-muted">Offline</small>
+                      </div>
+                    </div>
+                    <div class="chat-actions">
+                      <button class="btn btn-light" data-bs-toggle="tooltip" title="Voice Call">
+                        <i class="bi bi-telephone"></i>
+                      </button>
+                      <button class="btn btn-light" data-bs-toggle="tooltip" title="Video Call">
+                        <i class="bi bi-camera-video"></i>
+                      </button>
+                      <button class="btn btn-light" data-bs-toggle="tooltip" title="More Options">
+                        <i class="bi bi-three-dots-vertical"></i>
+                      </button>
                     </div>
                   </div>
 
-                  <!-- Sent Message -->
-                  <div class="message sent">
-                    <div class="message-content">
-                      <p>I'm good! Just checking out this new platform.</p>
-                      <span class="message-time">10:32 AM</span>
-                      <span class="message-status">
-                        <i class="bi bi-check2-all text-primary"></i>
-                      </span>
-                    </div>
+                  <!-- Chat Messages -->
+                  <div class="chat-messages">
+                    <!-- Messages will be loaded here -->
                   </div>
 
-                  <!-- Received Message with Image -->
-                  <div class="message received">
-                    <div class="message-content">
-                      <img src="https://via.placeholder.com/300x200" alt="Shared image" class="message-image">
-                      <p>Check out this design!</p>
-                      <span class="message-time">10:35 AM</span>
-                    </div>
-                  </div>
-
-                  <!-- Sent Message -->
-                  <div class="message sent">
-                    <div class="message-content">
-                      <p>Looks great! I'll review it and share my feedback.</p>
-                      <span class="message-time">10:36 AM</span>
-                      <span class="message-status">
-                        <i class="bi bi-check2-all"></i>
-                      </span>
-                    </div>
-                  </div>
-
-                  <!-- Typing Indicator -->
-                  <div class="message received">
-                    <div class="typing-indicator">
-                      <span></span>
-                      <span></span>
-                      <span></span>
-                    </div>
-                  </div>
-                </div>
-
-                <!-- Chat Input -->
-                <div class="chat-input-container">
-                  <button class="btn btn-light" data-bs-toggle="tooltip" title="Add Emoji">
-                    <i class="bi bi-emoji-smile"></i>
-                  </button>
-                  <button class="btn btn-light" data-bs-toggle="tooltip" title="Attach File">
-                    <i class="bi bi-paperclip"></i>
-                  </button>
-                  <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Type a message...">
-                    <button class="btn btn-primary">
-                      <i class="bi bi-send"></i>
+                  <!-- Chat Input -->
+                  <div class="chat-input-container">
+                    <button class="btn btn-light" data-bs-toggle="tooltip" title="Add Emoji">
+                      <i class="bi bi-emoji-smile"></i>
                     </button>
+                    <button class="btn btn-light" data-bs-toggle="tooltip" title="Attach File">
+                      <i class="bi bi-paperclip"></i>
+                    </button>
+                    <div class="input-group">
+                      <input type="text" class="form-control" placeholder="Type a message...">
+                      <button class="btn btn-primary">
+                        <i class="bi bi-send"></i>
+                      </button>
+                    </div>
                   </div>
                 </div>
 
@@ -335,18 +216,12 @@
                 <div id="call-container" style="display: none;">
                   <div class="call-header">
                     <h5 id="call-title"></h5>
-                    <button class="btn btn-danger" onclick="endCall()">End Call</button>
                   </div>
                   <div class="video-container">
-                    <div id="remote-video-container">
-                      <video id="remote-video"></video>
-                    </div>
-                    <div id="local-video-container">
-                      <video id="local-video"></video>
-                    </div>
+                    <div id="remote-video-container"></div>
+                    <div id="local-video-container"></div>
                   </div>
                 </div>
-
               </div>
             </div>
           </div>
@@ -357,7 +232,8 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://download.agora.io/sdk/release/AgoraRTC_N.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jwt-decode/build/jwt-decode.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../assets/js/messages.js"></script>
