--- a/Front-end/pages/notifications.html
+++ b/Front-end/pages/notifications.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Luma | Notifications</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
@@ -37,8 +36,8 @@
             <i class="fa-solid fa-user-group"></i>
             <span class="badge rounded-pill bg-danger" id="friendsBadge">0</span>
           </a>
-<!--          <a class="nav-link" href="market.html" data-bs-toggle="tooltip" title="Market">-->
-<!--            <i class="fa-solid fa-shop"></i>-->
+          <a class="nav-link" href="market.html" data-bs-toggle="tooltip" title="Market">
+            <i class="fa-solid fa-shop"></i>
           </a>
           <a class="nav-link" href="messages.html" data-bs-toggle="tooltip" title="Messages">
             <i class="fa-solid fa-message"></i>
