--- a/Front-end/pages/settings.html
+++ b/Front-end/pages/settings.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Luma | Settings & Privacy</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
@@ -326,7 +325,7 @@
                             <span class="setting-description">Display your birthday on your public profile</span>
                           </label>
                         </div>
-                        <div class="form-check form-switch">
+                        <div class="form-check form-switch d-none">
                           <input class="form-check-input" type="checkbox" id="showActivity" checked>
                           <label class="form-check-label" for="showActivity">
                             <span class="setting-label">Activity Status</span>
@@ -388,7 +387,7 @@
                             <span class="setting-description">When someone share your post</span>
                           </label>
                         </div>
-                        <div class="form-check form-switch">
+                        <div class="form-check form-switch d-none">
                           <input class="form-check-input" type="checkbox" id="directMessages" checked>
                           <label class="form-check-label" for="directMessages">
                             <span class="setting-label">Direct Messages</span>
